Translate amazon-kms.adoc.po

--- a/l10n/po/ja_JP/_guides/amazon-kms.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-kms.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-04-21 13:11+0000\n"
-"PO-Revision-Date: 2021-04-21 21:17+0900\n"
+"PO-Revision-Date: 2021-04-29 11:29+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -38,7 +38,7 @@ msgstr "KMSについての詳しい情報は link:https://aws.amazon.com/kms/[AW
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:18
 msgid "The KMS extension is based on https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/welcome.html[AWS Java SDK 2.x].  It's a major rewrite of the 1.x code base that offers two programming models (Blocking & Async)."
-msgstr "KMSのエクステンションは link:https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/welcome.html[AWS Java SDK 2.x] をベースにしており、2つのプログラミングモデル(Blocking & Async)を提供する1.xのコードベースを大幅に書き換えています。"
+msgstr "KMSのエクステンションは link:https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/welcome.html[AWS Java SDK 2.x] をベースにしており、2つのプログラミングモデル(Blocking & Async)を提供し、1.xのコードベースを大幅に書き換えています。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:22
@@ -164,7 +164,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:73
-#, fuzzy
 msgid "Or, if you want to use your AWS account create a key using your default profile"
 msgstr "または、AWSアカウントを使用したい場合は、デフォルトのプロファイルを使用してキーを作成します。"
 
@@ -184,7 +183,6 @@ msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:81
-#, fuzzy
 msgid "The application built here allows to encrypt and decrypt text messages using a master key created on AWS KMS."
 msgstr "ここで構築したアプリケーションでは、AWS KMS上で作成したマスターキーを用いてテキストメッセージの暗号化・復号化を行うことができます。"
 
@@ -200,7 +198,6 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:88
-#, fuzzy
 msgid "The solution is located in the `amazon-kms-quickstart` {quickstarts-tree-url}/amazon-kms-quickstart[directory]."
 msgstr "ソリューションは `amazon-kms-quickstart` {quickstarts-tree-url}/amazon-kms-quickstart[ディレクトリ] にあります。"
 
@@ -230,25 +227,22 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:106
-#, fuzzy
 msgid "This command generates a Maven structure importing the RESTEasy/JAX-RS, Mutiny and Amazon KMS Client extensions.  After this, the `amazon-kms` extension has been added to your `pom.xml` as well as the Mutiny support for RESTEasy."
-msgstr "このコマンドは、RESTEasy/JAX-RS、Mutiny、Amazon KMSクライアントエクステンションをインポートするMaven構造体を生成します。 `pom.xml` この後、RESTEasyのMutinyサポートと同様に、 `amazon-kms` エクステンションが追加されています。"
+msgstr "このコマンドは、RESTEasy/JAX-RS、Mutiny、Amazon KMSクライアントエクステンションをインポートするMavenディレクトリ構造を生成します。この後、 `amazon-kms` エクステンションおよびRESTEasyのMutinyサポートが `pom.xml` に追加されています。"
 
 #. type: Title ==
 #: upstream/_guides/amazon-kms.adoc:107
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating JSON REST service"
 msgstr "JSON RESTサービスの作成"
 
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:111
-#, fuzzy
 msgid "In this example, we will create an application that allows to encrypt and decrypt text message provided in the request.  The example application will demonstrate the two programming models supported by the extension."
 msgstr "この例では、リクエストで提供されたテキストメッセージの暗号化と復号化を可能にするアプリケーションを作成します。この例のアプリケーションでは、エクステンションでサポートされている2つのプログラミングモデルを実演します。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:113
-#, fuzzy
 msgid "Let's create a `org.acme.kms.QuarkusKmsSyncResource` that will provide an API to encrypt and decrypt message using the synchronous client."
 msgstr "同期クライアントを使ってメッセージを暗号化・復号化するAPIを提供する `org.acme.kms.QuarkusKmsSyncResource` を作ってみましょう。"
 
@@ -341,7 +335,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:161
-#, fuzzy
 msgid "An encrypted message is in the form of a bytes array. To return it to the user we need to encode it as Base64 string in the `encrypt` endpoint.  On the `decrypt` endpoint we need to decode from the Base64 string back to the bytes array before sending it out to the KMS client."
 msgstr "暗号化されたメッセージはバイト配列の形をしています。これをユーザーに返すためには、 `encrypt` エンドポイントで Base64 文字列としてエンコードする必要があります。 `decrypt` エンドポイントでは、KMS クライアントに送信する前に Base64 文字列からバイト配列にデコードする必要があります。"
 
@@ -353,9 +346,8 @@ msgstr "KMSクライアントの設定"
 
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:167
-#, fuzzy
 msgid "Both KMS clients (sync and async) are configurable via the `application.properties` file that can be provided in the `src/main/resources` directory.  Additionally, you need to add to the classpath a proper implementation of the sync client. By default the extension uses the URL connection HTTP client, so you need to add a URL connection client dependency to the `pom.xml` file:"
-msgstr "KMS クライアント (sync と async) は、 `src/main/resources` ディレクトリーにある `application.properties` ファイルで設定できます。さらに、同期クライアントの適切な実装をクラスパスに追加する必要があります。デフォルトでは、エクステンションは URL 接続 HTTP クライアントを使用するので、URL 接続クライアントの依存関係を `pom.xml` ファイルに追加する必要があります。"
+msgstr "KMS クライアント (sync と async) は、 `src/main/resources` ディレクトリーにある `application.properties` ファイルで設定できます。さらに、同期クライアントの適切な実装をクラスパスに追加する必要があります。デフォルトでは、エクステンションは URL connection HTTP クライアントを使用するので、URL connectionクライアントの依存関係を `pom.xml` ファイルに追加する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/amazon-kms.adoc:174
@@ -416,21 +408,18 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:204
-#, fuzzy
 msgid "`quarkus.kms.aws.region` - It's required by the client, but since you're using a local KMS instance use `us-east-1` as it's a default region of localstack's KMS."
-msgstr "`quarkus.kms.aws.region` - クライアントが必要ですが、ローカルのKMSインスタンスを使用しているので、 `us-east-1` を使用してください。"
+msgstr "`quarkus.kms.aws.region` - クライアントによって必須とされていますが、ローカルのKMSインスタンスを使用しているので、ローカルスタックのKMSのデフォルトリージョンである `us-east-1` を使用してください。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:205
-#, fuzzy
 msgid "`quarkus.kms.aws.credentials.type` - Set `static` credentials provider with any values for `access-key-id` and `secret-access-key`"
-msgstr "`quarkus.kms.aws.credentials.type` - `static` の資格情報プロバイダを `access-key-id` と任意の値で設定します。 `secret-access-key`"
+msgstr "`quarkus.ses.aws.credentials.type` - `static` の資格情報プロバイダを `access-key-id` と `secret-access-key` について任意の値で設定します。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:206
-#, fuzzy
 msgid "`quarkus.kms.endpoint-override` - Override the KMS client to use a local instance instead of an AWS service"
-msgstr "`quarkus.kms.endpoint-override` - KMS クライアントをオーバーライドして AWS サービスではなくローカルインスタンスを使うようにする"
+msgstr "`quarkus.ses.endpoint-override` - KMS クライアントをオーバーライドして AWS サービスの代わりにローカルインスタンスを使うようにします"
 
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:209
@@ -461,25 +450,22 @@ msgstr "アプリケーションのパッケージ化は `./mvnw clean package` 
 
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:223
-#, fuzzy
 msgid "With GraalVM installed, you can also create a native executable binary: `./mvnw clean package -Dnative`.  Depending on your system, that will take some time."
-msgstr "GraalVMをインストールした状態で、ネイティブの実行バイナリーを作成することもできます: `./mvnw clean package -Dnative` .お使いのシステムにもよりますが、時間がかかります。"
+msgstr "GraalVMをインストールした状態であれば、ネイティブの実行バイナリーを作成することもできます: `./mvnw clean package -Dnative` 。お使いのシステムにもよりますが、多少時間が掛かります。"
 
 #. type: Title ===
 #: upstream/_guides/amazon-kms.adoc:224
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Going asynchronous"
-msgstr "非同期に行く"
+msgstr "非同期へ"
 
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:227
-#, fuzzy
 msgid "Thanks to the AWS SDK v2.x used by the Quarkus extension, you can use the asynchronous programming model out of the box."
 msgstr "Quarkusのエクステンションで使われているAWS SDK v2.xのおかげで、非同期プログラミングモデルをすぐに使えるようになりました。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:229
-#, fuzzy
 msgid "Create a `org.acme.kms.QuarkusKmsAsyncResource` REST resource that will be similar to our `QuarkusKmsSyncResource` but using an asynchronous programming model."
 msgstr "`org.acme.kms.QuarkusKmsAsyncResource` RESTリソースを作成します。 `QuarkusKmsSyncResource` と似ていますが、非同期プログラミングモデルを使用しています。"
 
@@ -552,7 +538,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:280
-#, fuzzy
 msgid "We create `Uni` instances from the `CompletionStage` objects returned by the asynchronous KMS client, and then transform the emitted item."
 msgstr "非同期のKMSクライアントから返された `CompletionStage` オブジェクトから `Uni` インスタンスを作成し、生成されたアイテムを変換します。"
 
