Update .po files

--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-config-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-config-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-30 14:07+0000\n"
+"POT-Creation-Date: 2021-04-28 16:08+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -53,9 +53,9 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-config-config.adoc:17
-#: upstream/_generated-config/latest/config/quarkus-config-config.adoc:26
-#, no-wrap
-msgid "string"
+#, fuzzy, no-wrap
+#| msgid "string"
+msgid "list of string"
 msgstr "string"
 
 #. type: Table
@@ -69,3 +69,9 @@ msgid ""
 "Accepts a single configuration profile name. If a configuration property cannot be found in the current active profile, the config performs the same lookup in the profile set by this configuration.\n"
 "--"
 msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-config-config.adoc:26
+#, no-wrap
+msgid "string"
+msgstr "string"
