--- a/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-04-14 17:20+0000\n"
+"POT-Creation-Date: 2021-04-28 16:09+0000\n"
 "PO-Revision-Date: 2021-04-25 23:37+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -955,7 +955,9 @@ msgstr "`keycloak.js` などの OpenId Connect Provider スクリプトが認可
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:436
-msgid "If your work with a Quarkus OIDC `web-app` application then it is Quarkus OIDC Code Authentication mechanism which is managing the user session lifespan."
+#, fuzzy
+#| msgid "If your work with a Quarkus OIDC `web-app` application then it is Quarkus OIDC Code Authentication mechanism which is managing the user session lifespan."
+msgid "If you work with a Quarkus OIDC `web-app` application then it is Quarkus OIDC Code Authentication mechanism which is managing the user session lifespan."
 msgstr "Quarkus OIDC `web-app` アプリケーションで作業している場合、ユーザーセッションの寿命を管理しているのはQuarkus OIDCコード認証メカニズムです。"
 
 #. type: Plain text
@@ -1008,7 +1010,7 @@ msgstr "TokenStateManager"
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:454
 #, fuzzy
-msgid "OIDC `CodeAuthenticationMechanism` is using the default `io.quarkus.oidc.TokenStateManager' interface implementation to keep the ID, access and refresh tokens returned in the authorization code or refresh grant responses in a session cookie. It makes Quarkus OIDC endpoints completely stateless."
+msgid "OIDC `CodeAuthenticationMechanism` is using the default `io.quarkus.oidc.TokenStateManager` interface implementation to keep the ID, access and refresh tokens returned in the authorization code or refresh grant responses in a session cookie. It makes Quarkus OIDC endpoints completely stateless."
 msgstr "OIDC `CodeAuthenticationMechanism` はデフォルトの `io.quarkus.oidc.TokenStateManager' インターフェイスの実装を使用しており、認証コードで返されたID、アクセス、リフレッシュ付与のレスポンスをセッションクッキーに保持しています。これにより、Quarkus OIDCエンドポイントは完全にステートレスになります。"
 
 #. type: Plain text
