--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-schema-management-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-schema-management-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-03 20:13+0000\n"
+"POT-Creation-Date: 2021-04-28 16:08+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -40,39 +40,147 @@ msgid "Default"
 msgstr "デフォルト"
 
 #. type: Table
-#: upstream/_generated-config/latest/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-schema-management-config.adoc:16
+#: upstream/_generated-config/latest/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-schema-management-config.adoc:70
 #, no-wrap
 msgid ""
 "[[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-schema-management-config_quarkus.hibernate-search-orm.schema-management.strategy]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-schema-management-config_quarkus.hibernate-search-orm.schema-management.strategy[quarkus.hibernate-search-orm.schema-management.strategy]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"The strategy used for index lifecycle.\n"
+"The schema management strategy, controlling how indexes and their schema\n"
+"are created, updated, validated or dropped on startup and shutdown.\n"
+"\n"
+"Available values:\n"
+"\n"
+"[cols=2]\n"
+"!===\n"
+"h!Strategy\n"
+"h!Definition\n"
+"\n"
+"!none\n"
+"!Do nothing: assume that indexes already exist and that their schema matches Hibernate Search's expectations.\n"
+"\n"
+"!validate\n"
+"!Validate that indexes exist and that their schema matches Hibernate Search's expectations.\n"
+"\n"
+"If it does not, throw an exception, but make no attempt to fix the problem.\n"
+"\n"
+"!create\n"
+"!For indexes that do not exist, create them along with their schema.\n"
+"\n"
+"For indexes that already exist, do nothing: assume that their schema matches Hibernate Search's expectations.\n"
+"\n"
+"!create-or-validate (**default**)\n"
+"!For indexes that do not exist, create them along with their schema.\n"
+"\n"
+"For indexes that already exist, validate that their schema matches Hibernate Search's expectations.\n"
+"\n"
+"If it does not, throw an exception, but make no attempt to fix the problem.\n"
+"\n"
+"!create-or-update\n"
+"!For indexes that do not exist, create them along with their schema.\n"
+"\n"
+"For indexes that already exist, validate that their schema matches Hibernate Search's expectations;\n"
+"if it does not match expectations, try to update it.\n"
+"\n"
+"**This strategy is unfit for production environments**,\n"
+"due to several important limitations,\n"
+"but can be useful when developing.\n"
+"\n"
+"!drop-and-create\n"
+"!For indexes that do not exist, create them along with their schema.\n"
+"\n"
+"For indexes that already exist, drop them, then create them along with their schema.\n"
+"\n"
+"!drop-and-create-and-drop\n"
+"!For indexes that do not exist, create them along with their schema.\n"
+"\n"
+"For indexes that already exist, drop them, then create them along with their schema.\n"
+"\n"
+"Also, drop indexes and their schema on shutdown.\n"
+"!===\n"
+"\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#mapper-orm-schema-management-strategy[this section of the reference documentation]\n"
+"for more information.\n"
 "--"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/latest/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-schema-management-config.adoc:17
-#: upstream/_generated-config/latest/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-schema-management-config.adoc:26
+#: upstream/_generated-config/latest/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-schema-management-config.adoc:71
+#: upstream/_generated-config/latest/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-schema-management-config.adoc:134
 #, no-wrap
 msgid "`none`, `validate`, `create`, `create-or-validate`, `create-or-update`, `drop-and-create`, `drop-and-create-and-drop`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/latest/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-schema-management-config.adoc:20
-#: upstream/_generated-config/latest/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-schema-management-config.adoc:28
+#: upstream/_generated-config/latest/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-schema-management-config.adoc:74
+#: upstream/_generated-config/latest/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-schema-management-config.adoc:136
 #, no-wrap
 msgid "`create-or-validate`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/latest/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-schema-management-config.adoc:25
+#: upstream/_generated-config/latest/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-schema-management-config.adoc:133
 #, no-wrap
 msgid ""
 "[[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-schema-management-config_quarkus.hibernate-search-orm.-persistence-unit-name-.schema-management.strategy]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-schema-management-config_quarkus.hibernate-search-orm.-persistence-unit-name-.schema-management.strategy[quarkus.hibernate-search-orm.\"persistence-unit-name\".schema-management.strategy]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"The strategy used for index lifecycle.\n"
+"The schema management strategy, controlling how indexes and their schema\n"
+"are created, updated, validated or dropped on startup and shutdown.\n"
+"\n"
+"Available values:\n"
+"\n"
+"[cols=2]\n"
+"!===\n"
+"h!Strategy\n"
+"h!Definition\n"
+"\n"
+"!none\n"
+"!Do nothing: assume that indexes already exist and that their schema matches Hibernate Search's expectations.\n"
+"\n"
+"!validate\n"
+"!Validate that indexes exist and that their schema matches Hibernate Search's expectations.\n"
+"\n"
+"If it does not, throw an exception, but make no attempt to fix the problem.\n"
+"\n"
+"!create\n"
+"!For indexes that do not exist, create them along with their schema.\n"
+"\n"
+"For indexes that already exist, do nothing: assume that their schema matches Hibernate Search's expectations.\n"
+"\n"
+"!create-or-validate (**default**)\n"
+"!For indexes that do not exist, create them along with their schema.\n"
+"\n"
+"For indexes that already exist, validate that their schema matches Hibernate Search's expectations.\n"
+"\n"
+"If it does not, throw an exception, but make no attempt to fix the problem.\n"
+"\n"
+"!create-or-update\n"
+"!For indexes that do not exist, create them along with their schema.\n"
+"\n"
+"For indexes that already exist, validate that their schema matches Hibernate Search's expectations;\n"
+"if it does not match expectations, try to update it.\n"
+"\n"
+"**This strategy is unfit for production environments**,\n"
+"due to several important limitations,\n"
+"but can be useful when developing.\n"
+"\n"
+"!drop-and-create\n"
+"!For indexes that do not exist, create them along with their schema.\n"
+"\n"
+"For indexes that already exist, drop them, then create them along with their schema.\n"
+"\n"
+"!drop-and-create-and-drop\n"
+"!For indexes that do not exist, create them along with their schema.\n"
+"\n"
+"For indexes that already exist, drop them, then create them along with their schema.\n"
+"\n"
+"Also, drop indexes and their schema on shutdown.\n"
+"!===\n"
+"\n"
+"See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#mapper-orm-schema-management-strategy[this section of the reference documentation]\n"
+"for more information.\n"
 "--"
 msgstr ""
