Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-named-backends-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-named-backends-build-time-config.adoc.po
@@ -79,14 +79,14 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-named-backends-build-time-config.adoc:107
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-named-backends-build-time-config.adoc:33
 #: upstream/_generated-config/latest/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-named-backends-build-time-config.adoc:110
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-named-backends-build-time-config.adoc:56
