--- a/l10n/po/ja_JP/_guides/micrometer.adoc.po
+++ b/l10n/po/ja_JP/_guides/micrometer.adoc.po
@@ -349,7 +349,7 @@ msgstr ""
 #: upstream/_guides/micrometer.adoc:196
 #, no-wrap
 msgid "Counters"
-msgstr ""
+msgstr "カウンター"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:200
