Add machine translation

--- a/l10n/po/ja_JP/_guides/security.adoc.po
+++ b/l10n/po/ja_JP/_guides/security.adoc.po
@@ -426,9 +426,9 @@ msgstr "Pemキーフォーマットのサポート"
 
 #. type: Table
 #: upstream/_guides/security.adoc:173
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "In JsonWebKey format"
-msgstr ""
+msgstr "JsonWebKey形式で"
 
 #. type: Table
 #: upstream/_guides/security.adoc:175
@@ -445,15 +445,15 @@ msgstr "ローカル検証"
 
 #. type: Table
 #: upstream/_guides/security.adoc:181
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "With Injected JWTParser"
-msgstr ""
+msgstr "インジェクションされたJWTParserで"
 
 #. type: Table
 #: upstream/_guides/security.adoc:183
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Accept JWT as cookie"
-msgstr ""
+msgstr "JWTをクッキーとして受け入れる"
 
 #. type: Title ===
 #: upstream/_guides/security.adoc:188
