--- a/l10n/po/ja_JP/_guides/hibernate-search-orm-elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-search-orm-elasticsearch.adoc.po
@@ -1564,39 +1564,45 @@ msgstr "実際のアプリケーションでは、明らかに起動時に実行
 
 #. type: Title ==
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:766
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Offline startup"
-msgstr ""
+msgstr "オフライン起動"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:771
+#, fuzzy
 msgid "By default, Hibernate Search sends a few requests to the Elasticsearch cluster on startup.  If the Elasticsearch cluster is not necessarily up and running when Hibernate Search starts, this could cause a startup failure."
-msgstr ""
+msgstr "デフォルトでは、Hibernate Search は起動時に Elasticsearch クラスタにいくつかのリクエストを送信します。Hibernate Searchの起動時にElasticsearchクラスタが必ずしも稼働していない場合、起動失敗の原因となります。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:773
+#, fuzzy
 msgid "To address this, you can configure Hibernate Search to not send any request on startup:"
-msgstr ""
+msgstr "これに対処するには、起動時にリクエストを送信しないようにHibernate Searchを設定します。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:777
+#, fuzzy
 msgid "Disable Elasticsearch version checks on startup by setting the configuration property link:#quarkus-hibernate-search-orm-elasticsearch_quarkus.hibernate-search-orm.elasticsearch.version-check.enabled[`quarkus.hibernate-search-orm.elasticsearch.version-check.enabled`] to `false`."
-msgstr ""
+msgstr "起動時にElasticsearchのバージョンチェックを行わないようにするには、設定プロパティ  link:#quarkus-hibernate-search-orm-elasticsearch_quarkus.hibernate-search-orm.elasticsearch.version-check.enabled[`quarkus.hibernate-search-orm.elasticsearch.version-check.enabled`]を `false` に設定します。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:780
+#, fuzzy
 msgid "Disable schema management on startup by setting the configuration property link:#quarkus-hibernate-search-orm-elasticsearch_quarkus.hibernate-search-orm.schema-management.strategy[`quarkus.hibernate-search-orm.schema-management.strategy`] to `none`."
-msgstr ""
+msgstr "起動時にスキーマ管理を無効にするには、コンフィギュレーション・プロパティを  link:#quarkus-hibernate-search-orm-elasticsearch_quarkus.hibernate-search-orm.schema-management.strategy[`quarkus.hibernate-search-orm.schema-management.strategy`]を `none` に設定します。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:783
+#, fuzzy
 msgid "Of course, even with this configuration, Hibernate Search still won't be able to index anything or run search queries until the Elasticsearch cluster becomes accessible."
-msgstr ""
+msgstr "もちろん、この構成でも、Elasticsearchクラスタがアクセス可能になるまでは、Hibernate Searchはインデックスを作成したり、検索クエリを実行したりすることはできません。"
 
 #. type: delimited block =
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:789
+#, fuzzy
 msgid "If you disable automatic schema creation by setting `quarkus.hibernate-search-orm.schema-management.strategy` to `none`, you will have to create the schema manually at some point before your application starts persisting/updating entities and executing search requests."
-msgstr ""
+msgstr "`quarkus.hibernate-search-orm.schema-management.strategy` を `none` に設定してスキーマの自動作成を無効にした場合、アプリケーションがエンティティの永続化/更新や検索要求の実行を開始する前のある時点で、手動でスキーマを作成する必要があります。"
 
 #. type: delimited block =
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:792
