--- a/l10n/po/ja_JP/_guides/micrometer.adoc.po
+++ b/l10n/po/ja_JP/_guides/micrometer.adoc.po
@@ -79,13 +79,15 @@ msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:36
+#, fuzzy
 msgid "Micrometer defines a core library providing a registration mechanism for Metrics, and core metric types (Counters, Gauges, Timers, Distribution Summaries, etc.). These core types provide an abstraction layer that can be adapted to different backend monitoring systems. In essence, your application (or a library) can `register` a `Counter`, `Gauge`, `Timer`, or `DistributionSummary` with a `MeterRegistry`. Micrometer will then delegate that registration to one or more implementations, where each implementation handles the unique considerations for the associated monitoring stack."
-msgstr ""
+msgstr "Micrometerは、メトリクスの登録メカニズムを提供するコアライブラリと、メトリクスのコアタイプ(カウンター、ゲージ、タイマー、ディストリビューション・サマリーなど)を定義しています。これらのコアタイプは、さまざまなバックエンド監視システムに適応できる抽象化レイヤーを提供します。要するに、アプリケーション（またはライブラリ）は、 `Counter`, `Gauge`, `Timer`, または `DistributionSummary` を `MeterRegistry` と共に `register` することができます。その後、Micrometerはその登録を1つまたは複数の実装に委ね、各実装は関連する監視スタックの独自の考慮事項を処理します。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:42
+#, fuzzy
 msgid "Micrometer uses naming conventions to translate between registered Meters and the conventions used by various backend registries. Meter names, for example, should be created and named using dots to separate segments, `a.name.like.this`.  Micrometer then translates that name into the format that the selected registry prefers. Prometheus uses underscores, which means the previous name will appear as `a_name_like_this` in Prometheus-formatted metrics output."
-msgstr ""
+msgstr "Micrometerでは、登録されたメーターと、さまざまなバックエンドレジストリで使用されている規約との間の翻訳に、命名規則を使用しています。たとえば、メーターの名前は、ドットでセグメントを区切って作成し、命名する必要があります。 `a.name.like.this` 。その後、Micrometerはその名前を、選択したレジストリが好むフォーマットに変換します。Prometheusではアンダースコアを使用しているため、Prometheus形式のメトリクス出力では前の名前が `a_name_like_this` と表示されます。"
 
 #. type: Title ==
 #: upstream/_guides/micrometer.adoc:43
@@ -109,8 +111,9 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:50
+#, fuzzy
 msgid "Download an {quickstarts-archive-url}[archive]."
-msgstr ""
+msgstr "quickstarts-archive-url}[archive]をダウンロードします。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:52
@@ -192,13 +195,15 @@ msgstr "アプリケーションの作成"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:101
+#, fuzzy
 msgid "Micrometer provides an API that allows you to construct your own custom metrics. The most common types of meters supported by monitoring systems are gauges, counters, and summaries. The following sections build an example endpoint, and observes endpoint behavior using these basic meter types."
-msgstr ""
+msgstr "Micrometerは、独自のカスタムメトリクスを構築するためのAPIを提供しています。モニタリング・システムでサポートされている最も一般的なメーターのタイプは、ゲージ、カウンター、サマリーです。以下のセクションでは、エンドポイントの例を構築し、これらの基本的なメータタイプを使用してエンドポイントの動作を観察します。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:104
+#, fuzzy
 msgid "To register meters, you need a reference to a `MeterRegistry`, which is configured and maintained by the Micrometer extension. The `MeterRegistry` can be injected into your application as follows:"
-msgstr ""
+msgstr "メーターを登録するには、Micrometerエクステンションによって構成され維持されている `MeterRegistry` への参照が必要です。 `MeterRegistry` は、次のようにしてアプリケーションに注入することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:108
@@ -249,19 +254,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:131
+#, fuzzy
 msgid "Micrometer maintains an internal mapping between unique metric identifier and tag combinations and specific meter instances. Using `register`, `counter`, or other methods to increment counters or record values does not create a new instance of a meter unless that combination of identifier and tag/label values hasn't been seen before."
-msgstr ""
+msgstr "Micrometerは、一意のメトリック識別子およびタグの組み合わせと、特定のメーターインスタンスとの間の内部マッピングを維持しています。 `register` や `counter` などを使用してカウンターを増加させたり値を記録したりしても、識別子とタグ/ラベル値の組み合わせがこれまでにないものでない限り、メーターの新しいインスタンスは作成されません。"
 
 #. type: Title ===
 #: upstream/_guides/micrometer.adoc:132
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Gauges"
-msgstr ""
+msgstr "ゲージ"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:137
+#, fuzzy
 msgid "Gauges measure a value that can increase or decrease over time, like the speedometer on a car. Gauges can be useful when monitoring the statistics for a cache or collection. Consider the following simple example that observes the size of a list:"
-msgstr ""
+msgstr "ゲージは、車のスピードメーターのように、時間の経過とともに増えたり減ったりする値を測定するものです。ゲージは、キャッシュやコレクションの統計情報を監視する際に便利です。次の簡単な例では、リストのサイズを監視しています。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:141
@@ -304,8 +311,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:168
+#, fuzzy
 msgid "Note that even numbers are added to the list, and odd numbers remove an element from the list. Try the following sequence and look for `example_list_size` in the plain text output:"
-msgstr ""
+msgstr "偶数番号はリストに追加され、奇数番号はリストから要素を削除することに注意してください。以下のシーケンスを試して、プレーンテキストの出力で `example_list_size` を確認してください。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:173
@@ -332,18 +340,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:187
+#, fuzzy
 msgid "It is important to note that gauges are sampled rather than set; there is no record of how the value associated with a gauge might have changed between measurements. In this example, the size of the list is observed when the Prometheus endpoint is visited."
-msgstr ""
+msgstr "ゲージは設定されるのではなくサンプリングされることに注意してください。この例では、Prometheusのエンドポイントにアクセスした際に、リストのサイズが観測されます。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:191
+#, fuzzy
 msgid "Micrometer provides a few additional mechanisms for creating gauges. Note that Micrometer does not create strong references to the objects it observes by default. Depending on the registry, Micrometer either omits gauges that observe objects that have been garbage-collected entirely or uses `NaN` (not a number) as the observed value."
-msgstr ""
+msgstr "Micrometerには、ゲージを作成するための追加のメカニズムがいくつかあります。なお、Micrometer はデフォルトでは、観測するオブジェクトへの強い参照を作成しません。レジストリによっては、ごみ収集されたオブジェクトを観測するゲージを完全に省略したり、観測値として `NaN` (数字ではありません) を使用したりしています。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:195
+#, fuzzy
 msgid "When should you use a Gauge? Only if you can't use something else. Never gauge something you can count. Gauges can be less straight-forward to use than counters. If what you are measuring can be counted (because the value always increments), use a counter instead."
-msgstr ""
+msgstr "どんなときにゲージを使うの？他のものが使えない場合に限ります。数えることができるものを測ってはいけません。ゲージはカウンターよりも使いにくい場合があります。測定しているものが数えられる場合（値が常に増加するため）は、代わりにカウンターを使用してください。"
 
 #. type: Title ===
 #: upstream/_guides/micrometer.adoc:196
@@ -353,8 +364,9 @@ msgstr "カウンター"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:200
+#, fuzzy
 msgid "Counters are used to measure values that only increase. In the example below, you will count the number of times you test a number to see if it is prime:"
-msgstr ""
+msgstr "カウンタは、増加するだけの値を測定するために使用されます。以下の例では、ある数字が素数であるかどうかを調べる回数を数えます。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:212
@@ -401,18 +413,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:236
+#, fuzzy
 msgid "It might be tempting to add a label or tag to the counter indicating what value was checked, but remember that each unique combination of metric name (`example.prime.number`) and label value produces a unique time series. Using an unbounded set of data as label values can lead to a \"cardinality explosion\", an exponential increase in the creation of new time series."
-msgstr ""
+msgstr "どのような値がチェックされたかを示すラベルやタグをカウンタに追加したくなるかもしれませんが、メトリック名( `example.prime.number`)とラベル値のユニークな組み合わせは、それぞれユニークな時系列を生成することを覚えておいてください。ラベル値として無制限のデータセットを使用すると、新しい時系列の作成が指数関数的に増加する「カーディナリティ・エクスプロージョン（cardinality explosion）」が発生する可能性があります。"
 
 #. type: delimited block =
 #: upstream/_guides/micrometer.adoc:243
+#, fuzzy
 msgid "Label and tag can be used interchangably. You may also see \"attribute\" used in this context in some documentation.  The gist is each that each label or tag or attribute defines an additional bit of information associated with the single numerical measurement that helps you classify, group, or aggregate the measured value later. The Micrometer API uses `Tag` as the mechanism for specifying this additional data."
-msgstr ""
+msgstr "ラベル」と「タグ」は同じ意味で使われています。また、ドキュメントによっては、この文脈で「属性」が使われていることもあります。要するに、それぞれのラベルやタグ、属性は、単一の数値測定に関連する追加の情報を定義するもので、後に測定値を分類したり、グループ化したり、集約したりするのに役立ちます。Micrometer APIでは、この追加データを指定する仕組みとして、 `Tag` を使用しています。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:247
+#, fuzzy
 msgid "It is possible to add a tag that would convey a little more information, however. Let's adjust our code, and move the counter to add some tags to convey additional information."
-msgstr ""
+msgstr "しかし、もう少し情報を伝えるためのタグを追加することは可能です。コードを調整して、カウンターを動かし、追加の情報を伝えるタグを追加してみましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:265
@@ -465,8 +480,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:289
+#, fuzzy
 msgid "Looking at the data produced by this counter, you can tell how often a negative number was checked, or the number one, or an even number, and so on. Try the following sequence and look for `example_prime_number_total` in the plain text output. Note that the `_total` suffix is added when Micrometer applies Prometheus naming conventions to `example.prime.number`, the originally specified counter name."
-msgstr ""
+msgstr "このカウンタが出力するデータを見ると、負の数、1の数、偶数の数などがどれくらいの頻度でチェックされたかがわかります。次のシーケンスを試して、プレーンテキストの出力で `example_prime_number_total` を探してみてください。なお、 `_total` は、元々指定されていたカウンタ名 `example.prime.number` に Micrometer が Prometheus の命名規則を適用したときに付けられたものです。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:294 upstream/_guides/micrometer.adoc:345
@@ -492,24 +508,27 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:308
+#, fuzzy
 msgid "When should you use a counter? Only if you are doing something that can not be either timed (or summarized).  Counters only record a count, which may be all that is needed. However, if you want to understand more about how a value is changing, a timer (when the base unit of measurement is time) or a distribution summary might be more appropriate."
-msgstr ""
+msgstr "どんな時にカウンターを使うのですか？時間を計ることもまとめることもできないようなことをしているときだけです。カウンターはカウントを記録するだけなので、それだけで十分な場合もあります。しかし、値がどのように変化しているかをより深く理解したい場合は、タイマー（基本的な測定単位が時間の場合）や分布集計の方が適切かもしれません。"
 
 #. type: Title ===
 #: upstream/_guides/micrometer.adoc:309
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Summaries and Timers"
-msgstr ""
+msgstr "サマリーとタイマー"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:314
+#, fuzzy
 msgid "Timers and distribution summaries in Micrometer are very similar. Both allow you to record an observed value, which will be aggregated with other recorded values and stored as a sum. Micrometer also increments a counter to indicate the number of measurements that have been recorded and tracks the maximum observed value (within a decaying interval)."
-msgstr ""
+msgstr "Micrometerのタイマーとディストリビューション・サマリーは非常によく似ています。どちらも観測値を記録することができ、その値は他の記録された値と合算されて合計値として保存されます。また、Micrometerでは、記録された測定値の数を示すカウンタをインクリメントし、最大の観測値を追跡します（減衰間隔内）。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:319
+#, fuzzy
 msgid "Distribution summaries are populated by calling the `record` method to record observed values, while timers provide additional capabilities specific to working with time and measuring durations. For example, we can use a timer to measure how long it takes to calculate prime numbers using one of the `record` methods that wraps the invocation of a Supplier function:"
-msgstr ""
+msgstr "ディストリビューション・サマリーは、 `record` メソッドを呼び出して観測値を記録することで作成されます。一方、タイマーは、時間の扱いや持続時間の測定に特化した追加機能を提供します。例えば、タイマーを使って、Supplier関数の呼び出しをラップする `record` メソッドの1つを使って、素数の計算にかかる時間を測定することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:333
@@ -530,8 +549,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:340
+#, fuzzy
 msgid "Micrometer will apply Prometheus conventions when emitting metrics for this timer. Prometheus measures time in seconds.  Micrometer converts measured durations into seconds and includes the unit in the metric name, per convention. After visiting the prime endpoint a few more times, look in the plain text output for the following three entries: `example_prime_number_test_seconds_count`, `example_prime_number_test_seconds_sum`, and `example_prime_number_test_seconds_max`."
-msgstr ""
+msgstr "Micrometerは、このタイマーの測定値を出力する際に、プロメテウスの規則を適用します。Prometheusでは、時間を秒単位で測定します。Micrometerは、測定された持続時間を秒に変換し、規約に従ってメトリック名に単位を含めます。プライムエンドポイントをさらに数回訪れた後、プレーンテキストの出力で次の3つのエントリを確認してください： `example_prime_number_test_seconds_count`, `example_prime_number_test_seconds_sum`, `example_prime_number_test_seconds_max` 。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:350
@@ -545,8 +565,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:355
+#, fuzzy
 msgid "Both timers and distribution summaries can be configured to emit additional statistics, like histogram data, precomputed percentiles, or service level objective (SLO) boundaries. Note that the count, sum, and histogram data can be re-aggregated across dimensions (or across a series of instances), while precomputed percentile values cannot."
-msgstr ""
+msgstr "タイマーとディストリビューションサマリーは、ヒストグラムデータ、事前に計算されたパーセンタイル、サービスレベル目標（SLO）の境界線など、追加の統計情報を出力するように設定できます。カウント、サム、ヒストグラムのデータは、ディメンション間（または一連のインスタンス間）で再集計できますが、事前に計算されたパーセンタイル値はできないことに注意してください。"
 
 #. type: Title ===
 #: upstream/_guides/micrometer.adoc:356
@@ -564,8 +585,9 @@ msgstr "メトリクスを表示するには、 `curl localhost:8080/q/metrics/`
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:364
+#, fuzzy
 msgid "The Micrometer extension automatically times HTTP server requests. Following Prometheus naming conventions for timers, look for `http_server_requests_seconds_count`, `http_server_requests_seconds_sum`, and `http_server_requests_seconds_max`. Dimensional labels have been added for the requested uri, the HTTP method (GET, POST, etc.), the status code (200, 302, 404, etc.), and a more general outcome field."
-msgstr ""
+msgstr "Micrometerエクステンションは、HTTPサーバーのリクエストを自動的にタイムアウトさせます。Prometheus のタイマーの命名規則に従い、 `http_server_requests_seconds_count` 、 `http_server_requests_seconds_sum` 、 `http_server_requests_seconds_max` を参照してください。要求された URI、HTTP メソッド (GET、POST など)、ステータスコード (200、302、404 など)、そしてより一般的な結果フィールドのための次元ラベルが追加されました。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:375
@@ -588,30 +610,33 @@ msgstr "メトリクスは遅延的に表示され、何かがアクセスしよ
 
 #. type: Block title
 #: upstream/_guides/micrometer.adoc:380
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Ignoring endpoints"
-msgstr ""
+msgstr "エンドポイントの無視"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:387
+#, fuzzy
 msgid "You can disable measurement of HTTP endpoints using the `quarkus.micrometer.binder.http-server.ignore-patterns` property. This property accepts a comma-separated list of simple regex match patterns identifying URI paths that should be ignored. For example, setting `quarkus.micrometer.binder.http-server.ignore-patterns=/example/prime/[0-9]+` will ignore a request to `http://localhost:8080/example/prime/7919`. A request to `http://localhost:8080/example/gauge/7919` would still be measured."
-msgstr ""
+msgstr "`quarkus.micrometer.binder.http-server.ignore-patterns` プロパティを使用して、HTTP エンドポイントの測定を無効にすることができます。このプロパティには、無視すべきURIパスを特定する単純な正規表現のマッチパターンをコンマで区切ったリストを指定できます。例えば、 `quarkus.micrometer.binder.http-server.ignore-patterns=/example/prime/[0-9]+` を設定すると、以下へのリクエストが無視されます。 `&lt;a href=\"http://localhost:8080/example/prime/7919\" class=\"bare\"&gt;http://localhost:8080/example/prime/7919&lt;/a&gt;`.へのリクエストは無視されます。 `&lt;a href=\"http://localhost:8080/example/gauge/7919\" class=\"bare\"&gt;http://localhost:8080/example/gauge/7919&lt;/a&gt;`へのリクエストは、依然として計測されます。"
 
 #. type: Block title
 #: upstream/_guides/micrometer.adoc:388
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "URI templates"
-msgstr ""
+msgstr "URIテンプレート"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:393
+#, fuzzy
 msgid "The micrometer extension will make a best effort at representing URIs containing path parameters in templated form.  Using examples from above, a request to `http://localhost:8080/example/prime/7919` should appear as an attribute of `http_server_requests_seconds_*` metrics with a value of `uri=/example/prime/{number}`."
-msgstr ""
+msgstr "micrometer拡張では、パスパラメータを含むURIをテンプレート化して表現することに最善の努力を払います。上の例を使うと、次のようなリクエストは `&lt;a href=\"http://localhost:8080/example/prime/7919\" class=\"bare\"&gt;http://localhost:8080/example/prime/7919&lt;/a&gt;`へのリクエストは、 `http_server_requests_seconds_*` metrics の属性として、 `uri=/example/prime/{number}` という値で表示されます。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:399
+#, fuzzy
 msgid "Use the `quarkus.micrometer.binder.http-server.match-patterns` property if the correct URL can not be determined. This property accepts a comma-separated list defining an association between a simple regex match pattern and a replacement string. For example, setting `quarkus.micrometer.binder.http-server.match-patterns=/example/prime/[0-9]+=/example/{jellybeans}` would use the value `/example/{jellybeans}` for the uri attribute any time the requested uri matches `/example/prime/[0-9]+`."
-msgstr ""
+msgstr "正しいURLが特定できない場合は、 `quarkus.micrometer.binder.http-server.match-patterns` プロパティを使用します。このプロパティには、単純な正規表現パターンと置換文字列の関連性を定義するコンマ区切りのリストを指定できます。例えば、 `quarkus.micrometer.binder.http-server.match-patterns=/example/prime/[0-9]+=/example/{jellybeans}` を設定すると、要求された uri が `/example/prime/[0-9]+` に一致した場合、uri 属性に `/example/{jellybeans}` の値が使用されます。"
 
 #. type: Title ==
 #: upstream/_guides/micrometer.adoc:400
@@ -701,19 +726,21 @@ msgstr "この例では、シングルトン CDI Beanは、2 つの異なる `Me
 
 #. type: Title ==
 #: upstream/_guides/micrometer.adoc:458
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Does Micrometer support annotations?"
-msgstr ""
+msgstr "Micrometerはアノテーションに対応していますか？"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:463
+#, fuzzy
 msgid "Micrometer does define two annotations, `@Counted` and `@Timed`, that can be added to methods. The `@Timed` annotation will wrap the execution of a method and will emit the following tags in addition to any tags defined on the annotation itself: class, method, and exception (either \"none\" or the simple class name of a detected exception)."
-msgstr ""
+msgstr "Micrometerでは、メソッドに追加できる2つのアノテーション、 `@Counted` と `@Timed` が定義されています。 `@Timed` アノテーションは、メソッドの実行をラップし、アノテーション自体に定義されているタグに加えて、次のタグを出力します：class、method、exception（\"none \"または検出された例外の単純なクラス名）。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:466
+#, fuzzy
 msgid "Using annotations is limited, as you can't dynamically assign meaningful tag values. Also note that many methods, e.g.  REST endpoint methods or Vert.x Routes, are counted and timed by the micrometer extension out of the box."
-msgstr ""
+msgstr "意味のあるタグ値を動的に割り当てることができないため、アノテーションの使用には制限があります。また、RESTエンドポイント・メソッドやVert.x Routesなどの多くのメソッドは、箱から出した状態ではマイクロメータ・エクステンションによってカウントされ、時間が計測されることに注意してください。"
 
 #. type: Title ==
 #: upstream/_guides/micrometer.adoc:467
