--- a/l10n/po/ja_JP/_posts/2021-04-28-quarkus-1-13-3-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-04-28-quarkus-1-13-3-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-28-quarkus-1-13-3-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-28-quarkus-1-13-3-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.13.3.Final released - Maintenance release'\n"
@@ -34,16 +34,25 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 1.13.3.Final released - Maintenance release'\n"
+"date: 2021-04-14\n"
+"tags: release\n"
+"synopsis: 1.13.3.Finalは、1.13リリーストレインのメンテナンスリリースです。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-28-quarkus-1-13-3-final-released.adoc:11
+#, fuzzy
 msgid "We just released 1.13.3.Final, a new maintenance release for the 1.13 release train."
-msgstr ""
+msgstr "1.13リリーストレインの新しいメンテナンスリリースである1.13.3.Finalをリリースしました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-28-quarkus-1-13-3-final-released.adoc:13
+#, fuzzy
 msgid "1.13.3.Final is a safe upgrade for everyone using Quarkus 1.13."
-msgstr ""
+msgstr "1.13.3.Finalは、Quarkus 1.13を使用しているすべての人にとって安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-28-quarkus-1-13-3-final-released.adoc:15
@@ -64,8 +73,9 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-28-quarkus-1-13-3-final-released.adoc:21
+#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.13.3.Final[the full changelog of 1.13.3.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.13.3.Final[1.13.3.Finalの完全な変更履歴は、GitHubに]掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-04-28-quarkus-1-13-3-final-released.adoc:22
