Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.7/guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/qute-reference.adoc.po
@@ -1706,7 +1706,7 @@ msgstr "テンプレートに直接Beansを注入"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:782
 msgid "A CDI bean annotated with `@Named` can be referenced in any template through the `inject` namespace:"
-msgstr ""
+msgstr "`@Named` でアノテーションされた CDI Beanは、 `inject` 名前空間を通して、どのテンプレートでも参照することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:786
@@ -1827,8 +1827,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:854
+#, fuzzy
 msgid "A value resolver is automatically generated for a method annotated with `@TemplateExtension`.  If a class is annotated with `@TemplateExtension` then a value resolver is generated for every non-private static method declared on the class.  Method-level annotations override the behavior defined on the class.  Methods that do not meet the following requirements are ignored."
-msgstr ""
+msgstr "値リゾルバは、 `@TemplateExtension` でアノテーションされたメソッドに対して自動的に生成されます。クラスが `@TemplateExtension` でアノテーションされている場合、そのクラスで宣言されている _プライベートではないスタティック・メソッド_ ごとに値リゾルバが生成されます。メソッドレベルのアノテーションは、クラスで定義された動作をオーバーライドします。以下の要件を満たさないメソッドは無視されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:856
@@ -1838,12 +1839,12 @@ msgstr "テンプレート拡張メソッド:"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:858
 msgid "must not be `private`"
-msgstr ""
+msgstr "`private` であってはなりません"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:859
 msgid "must be static,"
-msgstr ""
+msgstr "`static` でなければなりません"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:860
@@ -1934,7 +1935,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:900
 msgid "This template extension method makes it possible to render the following template:"
-msgstr ""
+msgstr "このテンプレート拡張メソッドを使うと、以下のテンプレートをレンダリングすることができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:904
@@ -1945,7 +1946,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:906
 msgid "`item` is resolved to an instance of `org.acme.Item`."
-msgstr ""
+msgstr "`item` は `org.acme.Item` のインスタンスに解決されます。"
 
 #. type: Title ====
 #: upstream/_versions/1.7/guides/qute-reference.adoc:907
@@ -1996,7 +1997,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:931
 msgid "`item.discountedPrice` is resolved to an instance of `BigDecimal`."
-msgstr ""
+msgstr "`item.discountedPrice` は `BigDecimal` のインスタンスに解決されます。"
 
 #. type: Title ====
 #: upstream/_versions/1.7/guides/qute-reference.adoc:933
@@ -2566,7 +2567,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1193
 msgid "A warning message is logged for each _unused_ parameter."
-msgstr ""
+msgstr "_未使用の_ パラメーターごとに警告メッセージが記録されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1194
