--- a/l10n/po/ja_JP/_versions/1.7/guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/qute-reference.adoc.po
@@ -1658,7 +1658,7 @@ msgstr "テンプレートバリアント"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:760
 msgid "Sometimes it's useful to render a specific variant of the template based on the content negotiation.  This can be done by setting a special attribute via `TemplateInstance.setAttribute()`:"
-msgstr ""
+msgstr "コンテンツネゴシエーションに基づいてテンプレートの特定のバリアントをレンダリングすることが有用な場合があります。これは `TemplateInstance.setAttribute()` を通じて特別な属性を設定することで行うことができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:764
@@ -1717,17 +1717,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:788
 msgid "First, a bean with name `foo` is found and then used as the base object."
-msgstr ""
+msgstr "まず、 `foo` という名前のBeanを見つけ、それをベースオブジェクトとして使用します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:791
 msgid "All expressions using the `inject` namespace are validated during build.  For the expression `inject:foo.price` the implementation class of the injected bean must either have the `price` property (e.g. a `getPrice()` method) or a matching <<template_extension_methods,template extension method>> must exist."
-msgstr ""
+msgstr "`inject` 名前空間を使用するすべての式は、ビルド時に検証されます。式 `inject:foo.price` については、注入されたBeanの実装クラスに `price` プロパティー ( `getPrice()` メソッドなど) があるか、一致する link:#template_extension_methods[テンプレート拡張メソッド] が存在していなければなりません。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:793
 msgid "A `ValueResolver` is also generated for all beans annotated with `@Named` so that it's possible to access its properties without reflection."
-msgstr ""
+msgstr "`@Named` でアノテーションされたすべてのBeanに対して `ValueResolver` も生成され、そのプロパティーにリフレクションなしでアクセスできるようになります。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/qute-reference.adoc:795
@@ -1986,7 +1986,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:925
 msgid "This method matches an expression with base object of the type `BigDecimal.class`, with the `scale` virtual method name and two virtual method parameters."
-msgstr ""
+msgstr "このメソッドは、 `BigDecimal.class` 型の基底オブジェクトと、 `scale` の仮想メソッド名と 2 つの仮想メソッドパラメーターを持つ式にマッチします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:929
@@ -2008,7 +2008,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:938
 msgid "If `TemplateExtension#namespace()` is specified then the extension method is used to resolve expressions with the given <<expressions,namespace>>.  Template extension methods that share the same namespace are grouped in one resolver ordered by `TemplateExtension#priority()`.  The first matching extension method is used to resolve an expression."
-msgstr ""
+msgstr "`TemplateExtension#namespace()` が指定された場合、拡張メソッドが、指定された <<expressions,namespace>> を持つ式を解決するために使用されます。同じ名前空間を共有するテンプレート拡張メソッドは、 `TemplateExtension#priority()` で順に 1 つのリゾルバにグループ化されます。最初にマッチする拡張メソッドが式の解決に使用されます。"
 
 #. type: Block title
 #: upstream/_versions/1.7/guides/qute-reference.adoc:939
@@ -2147,7 +2147,7 @@ msgstr "Collections"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:991
 msgid "`get(index)`: Returns the element at the specified position in a list"
-msgstr ""
+msgstr "`get(index)` : リストの指定した位置の要素を返す"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:992
@@ -2157,13 +2157,13 @@ msgstr "`{list.get(0)}`"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:994
 msgid "A list element can be accessed directly: `{list.10}` or `{list[10]}`."
-msgstr ""
+msgstr "list 要素に直接アクセスすることができます: `{list.10}` または `{list[10]}` ."
 
 #. type: Title =====
 #: upstream/_versions/1.7/guides/qute-reference.adoc:995
 #, no-wrap
 msgid "Numbers"
-msgstr ""
+msgstr "数値"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:998
@@ -2184,7 +2184,7 @@ msgstr "設定"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1003
 msgid "`config:<name>` or `config:[<name>]`: Returns the config value for the given property name"
-msgstr ""
+msgstr "`config:<name>` 又は `config:[<name>]` : 指定したプロパティー名の設定値を返します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1004
@@ -2194,7 +2194,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1006
 msgid "`config:property(name)`: Returns the config value for the given property name; the name can be obtained dynamically by an expression"
-msgstr ""
+msgstr "`config:property(name)` : 指定したプロパティー名の設定値を返します。名前は式で動的に取得することが可能です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1007
