Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.7/guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/qute-reference.adoc.po
@@ -2464,7 +2464,7 @@ msgstr "基本的な考え方は、すべてのメッセージは潜在的に非
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1154
 msgid "Directly in your code via `io.quarkus.qute.i18n.MessageBundles#get()`; e.g. `MessageBundles.get(AppMessages.class).hello_name(\"Lucie\")`"
-msgstr ""
+msgstr "`io.quarkus.qute.i18n.MessageBundles#get()` を経由し、直接コードの中で使用。例: `MessageBundles.get(AppMessages.class).hello_name(\"Lucie\")`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1155
@@ -2510,12 +2510,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1171
 msgid "Denotes a message bundle interface. The bundle name is defaulted to `msg` and is used as a namespace in templates expressions, e.g. `{msg:hello_name}`."
-msgstr ""
+msgstr "メッセージバンドルインターフェイスを表します。 バンドル名のデフォルトは `msg` で、テンプレート式の名前空間として使用されます。例: `{msg:hello_name}`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1172
 msgid "Each method must be annotated with `@Message`. The value is a qute template."
-msgstr ""
+msgstr "各メソッドは `@Message` でアノテーションする必要があります。値は qute テンプレートです。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1173
@@ -2526,22 +2526,22 @@ msgstr "メソッドのパラメーターはテンプレートで使用するこ
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1174
 #, no-wrap
 msgid "Bundle Name and Message Keys"
-msgstr ""
+msgstr "バンドル名とメッセージキー"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1182
 msgid "Keys are used directly in templates.  The bundle name is used as a namespace in template expressions.  The `@MessageBundle` can be used to define the default strategy used to generate message keys from method names.  However, the `@Message` can override this strategy and even define a custom key.  By default, the annotated element's name is used as-is.  Other possibilities are:"
-msgstr ""
+msgstr "キーはテンプレート内で直接使用されます。バンドル名はテンプレート式の名前空間として使用されます。 `@MessageBundle` は、メソッド名からメッセージキーを生成するために使用されるデフォルトのストラテジーを定義するために使用することができます。しかし、 `@Message` はこのストラテジーをオーバーライドし、カスタム・キーを定義することもできます。デフォルトでは、アノテーションされた要素の名前がそのまま使用されます。他の可能性としては、以下のようなものがあります。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1184
 msgid "De-camel-cased and hyphenated; e.g. `helloName()` -> `hello-name`"
-msgstr ""
+msgstr "キャメルケースを止め、ハイフン化したもの。 例: `helloName()` -> `hello-name`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1185
 msgid "De-camel-cased and parts separated by underscores; e.g. `helloName()` -> `hello_name`."
-msgstr ""
+msgstr "キャメルケースを止め、パーツをアンダースコア区切りとしたもの。例: `helloName()` -> `hello_name`"
 
 #. type: Title ====
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1186
@@ -2552,17 +2552,17 @@ msgstr "バリデーション"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1189
 msgid "All message bundle templates are validated:"
-msgstr ""
+msgstr "すべてのメッセージバンドルテンプレートは検証されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1190
 msgid "All expressions without a namespace must map to a parameter; e.g. `Hello {foo}` -> the method must have a param of name `foo`"
-msgstr ""
+msgstr "名前空間を持たない全ての式はパラメーターにマッピングする必要があります。例: `Hello {foo}` の場合、メソッドは `foo` という名前のパラメータを持つ必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1191
 msgid "All expressions are validated against the types of the parameters; e.g. `Hello {foo.bar}` where the parameter `foo` is of type `org.acme.Foo` -> `org.acme.Foo` must have a property of name `bar`"
-msgstr ""
+msgstr "すべての式はパラメーターの型に対して検証されます。例: `Hello {foo.bar}` で、パラメーター `foo` の型が `org.acme.Foo` の場合、 `org.acme.Foo` は `bar` という名前のプロパティーを持つ必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1193
@@ -2646,7 +2646,7 @@ msgstr "値はローカライズされたテンプレートです。"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1230
 msgid "Message bundle files must be encoded in UTF-8.  The file name consists of the relevant bundle name (e.g. `msg`) and underscore followed by the locate tag (IETF).  The file format is very simple: each line represents either a key/value pair with the equals sign used as a separator or a comment (line starts with `#`).  Keys are mapped to method names from the corresponding message bundle interface.  Values represent the templates normally defined by `io.quarkus.qute.i18n.Message#value()`.  We use `.properties` suffix in our example because most IDEs and text editors support syntax highlighting of `.properties` files.  But in fact, the suffix could be anything."
-msgstr ""
+msgstr "メッセージバンドルファイルはUTF-8でエンコードされている必要があります。ファイル名は、関連するバンドル名(例: `msg` )とアンダースコア、続くロケートタグ(IETF)から構成されます。フ ァ イ ル形式は非常に単純です。各行は、キーと値のペアを表すもので、等号をセパレータとして使用するか、コメント(行頭が `#` で始まる)を使用します。キーは、対応するメッセージ・バンドル・インターフェースのメソッド名にマッピングされています。値は、通常 `io.quarkus.qute.i18n.Message#value()` で定義されているテンプレートを表します。この例では `.properties` サフィックスを使用しています。これは、ほとんどの IDE やテキスト・エディタが `.properties` ファイルのシンタックス・ハイライトをサポートしているからです。しかし、実際には、サフィックスは何でも構いません。"
 
 #. type: Block title
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1231
