Add some translations

--- a/l10n/po/ja_JP/_guides/security-customization.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-customization.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-04-28 16:09+0000\n"
-"PO-Revision-Date: 2021-04-21 15:04+0900\n"
+"PO-Revision-Date: 2021-04-30 16:48+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -298,16 +298,8 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_guides/security-customization.adoc:162
-#, fuzzy
-#| msgid ""
-#| "If more than one custom `SecurityIdentityAugmentor` is registered then they will be considered equal candidates and invoked in random order.\n"
-#| "You can enforce the order by implementing a default `SecurityIdentityAugmentor#priority` method. Augmentors with higher priorities will be invoked first.\n"
-#| "===\n"
 msgid "If more than one custom `SecurityIdentityAugmentor` is registered then they will be considered equal candidates and invoked in random order.  You can enforce the order by implementing a default `SecurityIdentityAugmentor#priority` method. Augmentors with higher priorities will be invoked first."
-msgstr ""
-"複数のカスタム `SecurityIdentityAugmentor` が登録されている場合、それらは同等の候補とみなされ、ランダムな順序で呼び出されます。\n"
-"デフォルトの `SecurityIdentityAugmentor#priority` メソッドを実装することで順番を強制することができます。優先度の高いエクステンションが最初に起動されます。\n"
-"===\n"
+msgstr "複数のカスタム `SecurityIdentityAugmentor` が登録されている場合、それらは同等の候補とみなされ、ランダムな順序で呼び出されます。デフォルトの `SecurityIdentityAugmentor#priority` メソッドを実装することで順番を強制することができます。優先度の高いAugmentors が最初に起動されます。"
 
 #. type: Title ==
 #: upstream/_guides/security-customization.adoc:165
@@ -437,9 +429,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:240
-#, fuzzy
 msgid "Please also see link:security-testing#testing-security[TestingSecurity Annotation] section on how to disable the security checks using `TestSecurity` annotation."
-msgstr "また、 `TestSecurity` アノテーションを使ってセキュリティチェックを無効にする方法については、 link:security-testing#testing-security[TestingSecurity Annotation]の項を参照してください。"
+msgstr "`TestSecurity` アノテーションを使ってセキュリティチェックを無効にする方法については、 link:security-testing#testing-security[TestingSecurity Annotation]の項を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/security-customization.adoc:241
