--- a/l10n/po/ja_JP/_guides/quartz.adoc.po
+++ b/l10n/po/ja_JP/_guides/quartz.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-30 14:04+0000\n"
-"PO-Revision-Date: 2021-03-06 12:38+0900\n"
+"PO-Revision-Date: 2021-04-30 16:45+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -333,10 +333,8 @@ msgstr "現在の開始時刻で新しい `Task` を作成します。"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:149
-#, fuzzy
-#| msgid "Persist the task in database using https://quarkus.io/guides/hibernate-orm-panache[Panache]."
 msgid "Persist the task in database using link:hibernate-orm-panache[Panache]."
-msgstr "link:https://quarkus.io/guides/hibernate-orm-panache[Panache] を使用してデータベースにタスクを永続化します。"
+msgstr "link:hibernate-orm-panache[Panache] を使用してデータベースにタスクを永続化します。"
 
 #. type: Title ===
 #: upstream/_guides/quartz.adoc:150
